fix: ✨ break the layout again

--- a/src/components/item-info/index.module.scss
+++ b/src/components/item-info/index.module.scss
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   flex-direction: row;
-  font-size: 16px;
+  font-size: $font-body;
   justify-content: space-between;
   margin: 10px 0;
   word-break: normal;
